--- a/gestion_suiviPI_web/.classpath
+++ b/gestion_suiviPI_web/.classpath
@@ -14,5 +14,9 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/omnifaces-1.4.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-fileupload-1.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-io-2.4.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/gestion_suiviPI"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/afterdark-1.0.9.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
